nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"nginx-test","namespace":"test-apps"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"nginx"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"nginx"}},"spec":{"containers":[{"image":"nginx:latest","name":"nginx","ports":[{"containerPort":80}],"volumeMounts":[{"mountPath":"/usr/share/nginx/html","name":"html-storage"}]}],"initContainers":[{"command":["sh","-c","cp /tmp/init/index. [...]
  creationTimestamp: "2026-02-22T14:54:49Z"
  generation: 3
  name: nginx-test
  namespace: test-apps
  resourceVersion: "382387"
  uid: 3c5763a8-b688-4a4c-9ba6-b4af002db070
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: html-storage
        persistentVolumeClaim:
          claimName: nginx-pvc
      - configMap:
          defaultMode: 420
          name: nginx-content
        name: config-source
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-02-22T14:54:49Z"
    lastUpdateTime: "2026-02-22T14:54:49Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-02-23T13:57:16Z"
    lastUpdateTime: "2026-02-23T13:57:16Z"
    message: ReplicaSet "nginx-test-6b9976d446" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 2
  unavailableReplicas: 1
  updatedReplicas: 2
